# Y-freeswitch

./: cc.sh  configure~ 2
docker/dockerConfig/: Dockerfile  README.txt  cdr_csv.conf.xml  createEnv.sh  freeswitch_monitor.sh  kill_bash.sh  log_process.sh  modules.conf.xml  switch_core_media.c  tts_file_process.sh  vad.conf.xml
docker/dockerConfig/mod_tripnow/: mod_tripnow.c
docker/dockerConfig/mod_uuid_playback/: Makefile  mod_uuid_playback.c
docker/dockerConfig/mod_uuid_playback_continue/: mod_uuid_playback_continue.c
docker/dockerConfig/mod_vad/: Makefile  mod_no_vad.c  mod_vad.c
docker/dockerConfig/mod_wuhancallin/: mod_wuhancallin.c
docker/master/: Dockerfile  Dockerfile_back  Dockerfile_masterback  docker-entrypoint.sh
docker/master/mod_vad/: Makefile.am  mod_vad.c
docker/master/mod_vad/conf/autoload_configs/: vad.conf.xml
libs/apr/: configure~ 2
libs/iksemel/: configure~ 2
libs/srtp/: configure~ 2
src/mod/applications/mod_callin/: mod_robot_callin.c
src/mod/applications/mod_demo_test/: mod_demo.c
src/mod/applications/mod_mep/: mod_mep.c
src/mod/applications/mod_robot/: mod_robot.c  mod_robot_TMonline.c  mod_robot_agionline.c  mod_robot_agionline_manual_processing.c  mod_robot_online.c  mod_robot_songzanonline.c
src/mod/applications/mod_vad/: Dockerfile  mod_no_vad.c  mod_vad.c  mod_vad_huoli.c  mod_vad_v1_10.c
